--- a/templates/simple-java-maven-app-2/template.yaml
+++ b/templates/simple-java-maven-app-2/template.yaml
@@ -2,7 +2,7 @@ version: 1
 type: pipeline-template
 
 name: Java Maven App Pipeline Job 2
-description: Simple Java App With Maven
+description: Simple Java App With Maven 2
 parameters:
   - name: emailRecipient
     type: string
