--- a/templates/simple-java-maven-app/template.yaml
+++ b/templates/simple-java-maven-app/template.yaml
@@ -1,7 +1,7 @@
 version: 1
 type: pipeline-template
 
-name: Java Maven App Pipeline Job 2
+name: Java Maven App Pipeline Job
 description: Simple Java App With Maven
 parameters:
   - name: emailRecipient
